Corrected spacing using beautify

--- a/css/style.css
+++ b/css/style.css
@@ -790,16 +790,12 @@ Mini devices (500px and smaller)
     margin-top: 30px;
 
   }
-
 }
-}
-
 
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
 @media only screen and (min-width: 640px) {
-
   /* for 2 column layout */
   .col-md-6 {
     width: 50%;
@@ -826,11 +822,11 @@ Medium devices (640px and larger)
 Medium devices (640px and larger) NAVIGATION
 ================================= */
 @media all and (min-width: 640px) {
-  nav>ul>li {
+  nav > ul > li {
     display: inline-block;
   }
 
-  nav>ul>li {
+  nav > ul > li {
     margin-top: 1em;
     margin-bottom: 1em;
   }
@@ -843,8 +839,6 @@ Medium devices (640px and larger) NAVIGATION
     display: none;
   }
 }
-
-
 
 /* ==============================
 ipad devices (767px and smaller)
@@ -867,7 +861,7 @@ ipad devices (767px and smaller)
 
   nav {
     width: auto;
-    float:right;
+    float: right;
     padding-right: 35px;
     padding-top: 10px;
   }
